# toaster

./: .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  PRD.md  README.md  SECURITY.md  flake.nix  index.html  knip.json  latest-test-run.txt  package.json  playwright.config.ts  test-results.txt  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.nix/: bun-lock-hash  bun.nix
docs/: MACOS_NOTES.md  PRD.md  build.md  commands.md  design-system.md  planned-release-v0.1.0.md  repo-layout.md  spec-driven.md  testing-kb.md
extras/: README.md
frontend/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ModelSelectorWidget.cpp  ModelSelectorWidget.h  WaveformView.cpp  WaveformView.h  main.cpp
libtoaster/: CMakeLists.txt  analysis.c  project.c  toaster.c  toaster.h  transcribe.c
libtoaster/callback/: callback.c
scripts/: audit-unified-model-catalog.ps1  build-unified-model-bindings.ps1  check-file-sizes.ts  check-translations.ts  eval-audio-boundary.ps1  eval-edit-quality.ps1  eval-multi-backend-parity.ps1  eval-verifier.ps1  generate-boundary-fixtures.ps1  generate-parity-fixtures.ps1  i18n-key-usage-ignore.txt  launch-toaster-monitored.ps1  lint-and-build-gate.ps1  run-eval-harness.ps1  run-live-midstream-validation.ps1  run-local-llm-eval-gate.ps1  run-toaster-logged.ps1  run-toaster.ps1  setup-env.ps1  toaster-runner.ps1  tsconfig.json
src/: AGENTS.md  App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
test/: CMakeLists.txt  test-analysis.c  test-edit.c  test-project.c  (+2 more)
(+395 files in other folders)
